--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^13.3.7",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
@@ -18,8 +19,15 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@angular/service-worker": "~13.3.0",
+    "@nebular/eva-icons": "^9.0.2",
+    "@nebular/theme": "^9.0.2",
+    "eva-icons": "^1.1.3",
+    "ngx-indexed-db": "^11.0.0",
     "rxjs": "~7.5.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
+    "use-indexeddb": "^1.0.9",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
